# particle-accelerator

./: .gitignore  CMakeLists.txt  CONCEPTION.md  Doxyfile  JOURNAL.md  NOMS  README.md  REPONSES.md  STYLEGUIDE.md  compare.sh  particle-accelerator.pro  todo.txt
header/: Accelerator.h  Beam.h  CircularBeam.h  Content.h  CurvedElement.h  Dipole.h  Element.h  GlSphere.h  GlWidget.h  Node.h  Particle.h  Particles.h  QtSupport.h  Quadrupole.h  ScatterPlot.h  Segment.h  Sextupole.h  StraightElement.h  Support.h  TextSupport.h  Vector3D.h  all.h  circularBeam.h  constants.h  themes.h  vertex_shader.h
logo/: image2particules.py
qt/: GlSphere.cpp  GlWidget.cpp  QtSupport.cpp  ScatterPlot.cpp  fragment_shader.glsl  qrc_resources.cpp  qt.pro  qt_main.cpp  resources.qrc  vertex_shader.glsl
src/: Accelerator.cpp  Beam.cpp  CircularBeam.cpp  CurvedElement.cpp  Dipole.cpp  Element.cpp  Node.cpp  Particle.cpp  Particle.h  Quadrupole.cpp  Segment.cpp  Sextupole.cpp  StraightElement.cpp  Vector3D.cpp  circularBeam.cpp  src.pro
test/: test.pro  test_accelerator.cpp  test_element.cpp  test_particle.cpp  test_vector3d.cpp
text/: TextSupport.cpp  main.cpp  p10.cpp  testModel.cpp  testModele.cpp  text.pro  text_accelerator.cpp
